fixed problem with splash on Intro page overflowing

--- a/src/scss/4-pages/ds-introduction-page.scss
+++ b/src/scss/4-pages/ds-introduction-page.scss
@@ -5,6 +5,7 @@
   z-index: 999;
   padding-left: 60px;
   // border: blue 1px solid;
+  overflow: hidden;
 
   .ds-intro-logo-brush {
     margin: ds-space(super-loose) * 5 0 ds-space(super-loose) * 2 0;
